# cabinet-agent-framework

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.zh-CN.md  SECURITY.md  SOUL.md  START_PROMPT.md  USER_INTENT.md  pyproject.toml
STATE/: project_status.md
adapters/: README.md  claude-code.md  codex.md  hermes.md  openclaw.md
cabinet_framework/: adapters.py  archive.py  autonomous_worker.py  capability.py  capability_contracts.py  cli.py  context_engine.py  conversation_bridge.py  dashboard.py  dispatcher.py  gates.py  governance.py  harness_intake.py  hermes_bridge.py  hooks.py  leader.py  lifecycle_gate.py  model.py  project_harness.py  sdk.py  secretariat.py  skill_forge.py  worker.py  worker_runtime.py
context_units/: README.md
docs/: PERFORMANCE_PLATFORM_OVERVIEW.md  README.md
examples/: README.md  demo_30s.py
headless/: README.md  runner.example.json
hooks/: README.md
integrations/: HERMES_ATTRIBUTION.md  HOST_ADAPTERS.md  MCP_RAG.md
mcp/: README.md  vector_index_schema.json
ops/: HEADLESS.md  HOOKS_LIFECYCLE.md
projects/: README.md
runtime/: README.md
scripts/: build_keyword_index.py  headless_loop.py  package_release.py  public_audit.py  reset_runtime.py
sdk/: AGENT_SDK.md
showcase/: README.md  index.html  package-lock.json  package.json
skills/: manifest.json
templates/: SUBPROJECTS.md
tests/: test_autonomous.py  test_cabinet_framework.py  test_capability_layer.py  test_context_engine_v1.py  test_harness_intake_v1.py  test_lifecycle_gate_v1.py  (+3 more)
(+80 files in other folders)
