[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cabinet-agent-framework"
version = "0.1.0"
description = "Portable cabinet-style multi-agent framework runtime for Hermes, Codex, Claude Code, OpenClaw and generic CLI agents."
requires-python = ">=3.10"
dependencies = [
  "jinja2>=3.1",
  "numpy>=1.24",
]

[project.scripts]
caf = "cabinet_framework.cli:main"

[tool.setuptools.packages.find]
include = ["cabinet_framework*"]
